# kursovaya_2

./: main.py  pyproject.toml
data/: test.json
src/: api.py  saver.py  utils.py  vacancy.py
tests/: test_api.py  test_saver.py  test_utils.py  test_vacancy.py
