[tool.poetry]
name = "kursovaya-2"
version = "0.1.0"
description = ""
authors = ["Michael < sorokajr678@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '''
(
  /(
    | \.git          # в корне проекта
    )
)
'''


[tool.isort]
# максимальная длина строки
line_length = 119